--- a/public/styles.css
+++ b/public/styles.css
@@ -99,4 +99,9 @@ form.create-note button {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   cursor: pointer;
   outline: none;
+  font-size: xx-large;
+  
+}
+form.create-note button:hover{
+  background: lightgray;
 }
